@@ -1,3 +1,4 @@
 #!/bin/bash
 
-java -jar /opt/jenkins.war $@
+export JAVA_OPTS="-XX:MaxPermSize=1024m -Xms1024m -Xmx2048m"
+jav a-jar /opt/jenkins.war $@
